--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ a {
     font-weight: bold;
     font-size: 18px;
     padding: 10px 25px;
-    background: #000;
+    background: #ff9214;
     transform: translate(-50%, -50%);
   }
   .popup{
